Fixed z-index for social action dropdown (TNL-1806)

--- a/lms/static/sass/multicourse/_dashboard.scss
+++ b/lms/static/sass/multicourse/_dashboard.scss
@@ -298,7 +298,6 @@
     @include transition(all 0.15s linear 0s);
     @include clearfix();
     @extend %ui-depth2;
-    position: relative;
     margin: ($baseline/2);
 
     .details {
